--- a/index.html
+++ b/index.html
@@ -29,39 +29,41 @@
             <div class="inner">
                 <h1>
                     <a href="">
-                        <img src="./images/logo.PNG" alt="">
+                        <img src="./images/eider_logo.png" alt="">
                     </a>
                 </h1>
                 <nav class="gnb">
                     <ul>
-                        <li><a href="">스토어</a>
+                        <li><a href="">BRAND</a>
                             <ul class="sub">
-                                <li><a href="">추천</a></li>
-                                <li><a href="">랭킹</a></li>
-                                <li><a href="">기획전</a></li>
-                                <li><a href="">브랜드관</a></li>
+                                <li><a href="">FILM</a></li>
+                                <li><a href="">LINE</a></li>
+                                <li><a href="">CAMPAIN</a></li>
+                                <li><a href="">EIDERIS</a></li>
                             </ul>
                         </li>
-                        <li><a href="">리모델링</a>
+                        <li><a href="">CATEGORY</a>
                             <ul class="sub">
-                                <li><a href="">추천</a></li>
-                                <li><a href="">매장</a></li>
-                                <li><a href="">상품</a></li>
-                                <li><a href="">이벤트</a></li>
+                                <li><a href="">아우터</a></li>
+                                <li><a href="">상의</a></li>
+                                <li><a href="">하의</a></li>
+                                <li><a href="">신발</a></li>
                             </ul>
                         </li>
-                        <li><a href="">홈아이디어</a>
+                        <li><a href="">KIDS</a>
                             <ul class="sub">
-                                <li><a href="">추천</a></li>
-                                <li><a href="">아파트로찾기</a></li>
-                                <li><a href="">매거진</a></li>
-                                <li><a href="">시공사례</a></li>
+                                <li><a href="">자켓</a></li>
+                                <li><a href="">티셔츠</a></li>
+                                <li><a href="">하의</a></li>
+                                <li><a href="">세트</a></li>
                             </ul>
                         </li>
                     </ul>
                 </nav>
                 <div class="service">
                     <i class="xi-bars"></i>
+                    <i class="xi-search"></i>
+                    <i class="xi-heart"></i>
                 </div>
             </div>
 
@@ -71,13 +73,136 @@
 
         <main>
             <!-- 메인 1 - 슬라이드 -->
-            <section class="main_slide"></section>
+            <section class="main_visual">
+                <div class="main_slide">
 
-            <!-- 메인 2 -->
-            <section class="main_product"></section>
+                    <div class="itm itm01">
+                        <div class="inner content">
+                            <h3>HEADWEAR Collection</h3>
+                            <p>같은 스타일도 색다르게, 취향대로 골라쓰세요.</p>
+                            <a href="" class="btn white">view more <i class="xi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="itm itm02">
+                        <div class="inner content">
+                            <h3>RAINWEAR SERIES </h3>
+                            <p>패커블 주머니가 있어 휴대하기 좋은 아이더 레인코트</p>
+                            <a href="" class="btn white">view more <i class="xi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="itm itm03">
+                        <div class="inner content">
+                            <h3>SEASON OFF up to 54% </h3>
+                            <p>지금이 기회, 아이더 인기 신상 특가전</p>
+                            <a href="" class="btn white">view more <i class="xi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="itm itm04">
+                        <div class="inner content">
+                            <h3>EIDER ICE T-SHIRT</h3>
+                            <p>지금부터 여름까지, 쿨하고 산뜻하게</p>
+                            <a href="" class="btn white">view more <i class="xi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="itm itm05">
+                        <div class="inner content">
+                            <h3>QUANTUM AEROHIKE</h3>
+                            <p>퀸텀 에어로하이크 시리즈</p>
+                            <a href="" class="btn white">view more <i class="xi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                </div>
 
 
+                <ul class="menu">
+                    <li>
+                        <a href="#slide1">01</a>
+                    </li>
+                    <li>
+                        <a href="#slide2">02</a>
+                    </li>
+                    <li>
+                        <a href="#slide3">03</a>
+                    </li>
+                    <li>
+                        <a href="#slide4">04</a>
+                    </li>
+                    <li>
+                        <a href="#slide5">05</a>
+                    </li>
+                </ul>
 
+                <div class="arrows">
+                    <i class="xi-arrow-left left"></i>
+                    <i class="xi-arrow-right right"></i>
+                </div>
+
+
+                <!--슬라이드에 번호 표시-->
+                <div class="slide_num">
+                    <span>1</span> / <strong>3</strong>
+                </div>
+
+
+                <!--스크롤 아래로 내리는 버튼 만들기-->
+                <a href="#down" class="scr">
+                    <span>scroll down</span>
+                </a>
+            </section>
+
+            <!------------- 메인 2 ------------>
+            <section class="main_product" id="down">
+
+                <div class="title inner">
+                    <h2>인기 상품</h2>
+                </div>
+
+                <!-- product 사진 -->
+                <div class="inner con">
+
+                    <!-- 사진 1 -->
+                    <div class="prd">
+                        <div class="prd_img">
+                            <img src="./images/itm01.jpg" alt="">
+                        </div>
+                        <div class="prd_info">
+                            <p class="prd_brand">eider</p>
+                            <p class="prd_name">POP 와플 여성 긴팔 짚업 티셔츠 (White)</p>
+                            <p class="prd_price">79,000</p>
+                        </div>
+                    </div>
+
+                    <!-- 사진 2 -->
+                    <div class="prd">
+                        <div class="prd_img">
+                            <img src="./images/itm02.jpg" alt="">
+                        </div>
+                        <div class="prd_info">
+                            <p class="prd_brand">eider</p>
+                            <p class="prd_name">ON THE ROCK (온더락) 남성 카고 조거 팬츠 (C/Grey)</p>
+                            <p class="prd_price">149,000</p>
+                        </div>
+                    </div>
+
+                    <!-- 사진 3 -->
+                    <div class="prd">
+                        <div class="prd_img">
+                            <img src="./images/itm04.jpg" alt="">
+                        </div>
+                        <div class="prd_info">
+                            <p class="prd_brand">eider</p>
+                            <p class="prd_name">퀀텀 에어로 하이크 (Orange)</p>
+                            <p class="prd_price">269,000</p>
+                        </div>
+                    </div>
+
+
+                </div>
             </section>
 
         </main>
