--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="inner content">
                             <h3>HEADWEAR Collection</h3>
                             <p>같은 스타일도 색다르게, 취향대로 골라쓰세요.</p>
-                            <a href="" class="btn white">view more <i class="xi-arrow-right"></i></a>
+                            <a href="" class="btn white black">view more <i class="xi-arrow-right"></i></a>
                         </div>
                     </div>
 
@@ -96,7 +96,7 @@
                         <div class="inner content">
                             <h3>SEASON OFF up to 54% </h3>
                             <p>지금이 기회, 아이더 인기 신상 특가전</p>
-                            <a href="" class="btn white">view more <i class="xi-arrow-right"></i></a>
+                            <a href="" class="btn white black">view more <i class="xi-arrow-right"></i></a>
                         </div>
                     </div>
 
