--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EIDER - 아이더</title>
+    <link rel="icon" href="./images/favicon_v2.ico">
+
+    <meta name="title" content="EIDER | 아이더" />
+    <meta name="description"
+        content="EIDER was born in France Montblanc(1962) with Chamonix Esprit(Challenge your fear)" />
+    <meta name="keywords" content="EIDER,아이더,아이더공식몰,아이더몰,아이더의류,아이더신발,아이더등산화,아이더등산복,아이더매장" />
 
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/font.css">
@@ -66,7 +72,11 @@
                     <i class="xi-bars"></i>
                 </div>
             </div>
-
+            <div class="mobile_btn">
+                <button>
+                    <span class="blind">모바일 버튼</span>
+                </button>
+            </div>
         </header>
 
 
@@ -162,6 +172,8 @@
                 <a href="#down" class="scr">
                     <span>scroll</span>
                 </a>
+
+
             </section>
 
             <!------------- 메인 2 ------------>
@@ -192,7 +204,7 @@
                     </div>
 
                     <!-- 사진 2 -->
-                    <div class="prd" data-aos="fade-up" data-aos-delay="300">
+                    <div class="prd" data-aos="fade-up" data-aos-delay="100">
                         <figure>
                             <div class="prd_img">
                                 <span>2</span>
